--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
           t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-      })(window, document, "clarity", "script", "s2i5vbhhgm");
+      })(window, document, "clarity", "script", "smi0wej6y2");
     </script>
   </head>
   <body>
