Fix Meta Pixel HTML structure - move noscript to body

--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
     fbq('init', '1287939146186577');
     fbq('track', 'PageView');
     </script>
-    <noscript>
-     <img height="1" width="1" 
-    src="https://www.facebook.com/tr?id=1287939146186577&ev=PageView&noscript=1"/>
-    </noscript>
     <!-- End Facebook Pixel Code -->
   </head>
   <body>
+    <!-- Facebook Pixel Noscript -->
+    <noscript>
+      <img height="1" width="1" 
+      src="https://www.facebook.com/tr?id=1287939146186577&ev=PageView&noscript=1"/>
+    </noscript>
+    <!-- End Facebook Pixel Noscript -->
+    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
